# rustloader

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DISTRIBUTION_NOTES.md  GITHUB_RELEASE_BODY.md  KNOWN_ISSUES.md  LICENSE  MANUAL_TEST_CHECKLIST.md  QA_REPORT.md  QA_STATUS.md  QA_SUMMARY.md  QUICK_FIX_CHECKLIST.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.7.0.md  ROADMAP.md  SECURITY.md  TESTING_INSTRUCTIONS.md  YTDLP_BUNDLED_DETECTION.md  build_dmg.sh  build_standalone.sh  codecov.yml  create-svg-icon.sh  create_tag.sh  deny.toml  index.html  install.sh  package.json  package_release.sh  tag_message.txt  test_facebook_extraction.rs  uninstall_rustloader.sh  verify_release.sh  verify_tasks.sh  vite.config.ts
.cargo/: audit.toml
.claude/skills/rust-skills/: ATTRIBUTION.md
.claude/skills/rustloader-invariants-guard/: SKILL.md
.github/workflows/: ci.yml  release.yml
Rustloader.app/Contents/: Info.plist
Rustloader.app/Contents/_CodeSignature/: CodeResources
assets/icons/: AppIcon.icns
benches/: organizer_benchmarks.rs  segment_benchmarks.rs
docs/: FEATURE_SPEC_v0.9.0.md  fix_report_v0.9.0.md  test_report_v0.9.0.md
docs/ai-os/: README.md  architecture.md  backlog.md  invariants.md  status.md
docs/ai-os/adr/: 0001-license-posture.md  0002-external-subprocess-no-gpl-bundling.md  0003-bound-all-external-process-calls.md  0004-proxy-capture-mitm.md
docs/ai-os/spikes/: F-EXTRACT-001-phase0-findings.md
scripts/: build-all.ps1  build-all.sh  install.sh  secure_install.sh  uninstall.sh
src/: App.tsx  app.rs  cli.rs  counter.rs  create_icon.sh  dependency_validator.rs  downloader.rs  error.rs  ffmpeg_wrapper.rs  lib.rs  license.rs  main.rs  main.rs.new  promo.rs  security.rs  utils.rs  youtube_dl_wrapper.rs  ytdlp_improved.rs  ytdlp_wrapper.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri_schema.json
src-tauri/src/: main.rs
src/backend/: actor.rs  messages.rs  mod.rs
src/components/: DownloadForm.tsx  LicenseInfo.tsx  ProgressBar.tsx
src/database/: mod.rs  operations.rs  schema.rs
src/downloader/: engine.patch  engine.rs  engine.rs.rej  merger.rs  mod.rs  progress.rs  resume_guard.rs  segment.rs
src/extractor/: hybrid.rs  mod.rs  models.rs  traits.rs  ytdlp.rs
src/extractor/native/: youtube.rs
src/gui/: README.md  app.rs  clipboard.rs  clipboard_monitor.rs  icon.rs  integration.rs  mod.rs  theme.rs
src/gui/components/: download_card.rs  download_item.rs  format_selector.rs  history_item.rs  mod.rs  progress_bar.rs  url_input.rs
src/gui/views/: history_view.rs  main_view.rs  mod.rs  settings_view.rs
src/queue/: events.rs  manager.rs  mod.rs
src/utils/: bundle_paths.rs  config.rs  config_fix.rs  cookies.rs  depcheck.rs  error.rs  metadata.rs  mod.rs  organizer.rs  platform.rs
tests/: cli_test.rs  execution_test.rs  integration.rs  orphan_cleanup_test.rs  persistence_test.rs  stress_test.rs
