[package]
name = "rustloader"
version = "1.0.0"
edition = "2021"
authors = ["Ibrahim Mohamed"]
description = "Advanced video downloader for various content sources"

[dependencies]
# CLI and formatting
clap = "4.5"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11.0"

# Error handling
thiserror = "1.0"

# Async Runtime
tokio = { version = "1.32", features = ["full"] }

# Dates and time handling
chrono = { version = "0.4", features = ["serde"] }

# File size formatting
humansize = "2.1.3"

# Paths and directories
dirs-next = "2.0.0"
home = "0.5"

# Parsing and regex
regex = "1.11"

# Notifications
notify-rust = "4.11.3"

# Singleton patterns
once_cell = "1.21.0"

# Random number generation
rand = "0.8"

# Cryptography and encoding
ring = "0.17"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Version comparison
semver = "1.0"

# Machine identification
hostname = "0.3"

# YouTube downloader
youtube_dl = "0.10.0"
libc = "0.2.171"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.51"         # For Windows registry access

[features]
default = []
pro = []  # Feature flag for Pro version

[lib]
name = "rustloader"
path = "src/lib.rs"

[[bin]]
name = "rustloader"
path = "src/main.rs"
