[package]
name = "rustloader"
version = "1.0.0"
edition = "2021"
authors = ["Ibrahim Mohamed"]
description = "Advanced video downloader for various content sources"

[dependencies]
# CLI and formatting
clap = "4.5"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11.0"

# Error handling
thiserror = "1.0"

# Async Runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1.77"
futures-util = "0.3.30"

# Dates and time handling
chrono = { version = "0.4", features = ["serde"] }

# File size formatting
humansize = "2.1.3"

# Paths and directories
dirs-next = "2.0.0"
home = "0.5"

# Parsing and regex
regex = "1.11"
url = "2.5.0"
html-escape = "0.2.13"

# Notifications
notify-rust = "4.11.3"

# Singleton patterns
once_cell = "1.21.0"

# Random number generation
rand = "0.8"

# Cryptography and encoding
ring = "0.17"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Version comparison
semver = "1.0"

# Machine identification
hostname = "0.3"

# Native YouTube downloader (replaces yt-dlp)
rustube = "0.6.0"

# MIME type detection
mime_guess = "2.0.4"

# FFmpeg native bindings (replaces external ffmpeg)
ffmpeg-next = { version = "6.1.0", features = ["build"], optional = true }
ffmpeg4 = { version = "0.6.0", optional = true }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.51"         # For Windows registry access

[features]
default = ["ffmpeg-next"]
ffmpeg-binary = ["ffmpeg-next"]
minimal = []
pro = ["ffmpeg-next/build-lib", "rustube/download-info"]

[lib]
name = "rustloader"
path = "src/lib.rs"

[[bin]]
name = "rustloader"
path = "src/main.rs"