[package]
name = "rustloader-ui"
version = "1.0.0"
description = "Advanced Video Downloader GUI"
authors = ["Ibrahim Mohamed"]
license = ""
repository = ""
default-run = "rustloader-ui"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [
  "dialog-all", 
  "fs-read-file", 
  "fs-write-file", 
  "fs-read-dir", 
  "fs-copy-file", 
  "fs-create-dir", 
  "fs-remove-dir", 
  "fs-remove-file", 
  "fs-exists", 
  "notification-all", 
  "path-all", 
  "shell-open"
] }
# Add your rustloader crate as a path dependency
rustloader = { path = ".." }  # Adjust this path as needed

[features]
# This feature is used for production builds where `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Automatically strip symbols from the binary
