[package]
name = "rustloader-ui"
version = "1.0.0"
description = "Advanced Video Downloader GUI"
authors = ["Ibrahim Mohamed"]
license = ""
repository = ""
default-run = "rustloader-ui"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
  "dialog-all", 
  "fs-read-file", 
  "fs-write-file", 
  "fs-read-dir", 
  "fs-copy-file", 
  "fs-create-dir", 
  "fs-remove-dir", 
  "fs-remove-file", 
  "fs-exists", 
  "notification-all", 
  "path-all", 
  "shell-open"
] }

rustloader = { path = ".." }

[features]
custom-protocol = ["tauri/custom-protocol"]
