[package]
name = "rustloader-ui"
version = "1.0.0"
description = "Advanced Video Downloader GUI"
authors = ["Ibrahim Mohamed"]
license = ""
repository = ""
default-run = "rustloader-ui"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.3.1", features = [] }

rustloader = { path = ".." }

[features]
custom-protocol = ["tauri/custom-protocol"]
